--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AEGIS</title>
+    <script src="/src/env.js"></script>
   </head>
   <body>
     <div id="root"></div>
